Nansus V10_11_2018/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PRGM ID main_quad add_function_to_directory EOS program_prime
Rule 2     program_prime -> vars program_prime
Rule 3     program_prime -> program_second_prime
Rule 4     program_second_prime -> modules program_second_prime
Rule 5     program_second_prime -> MAIN program_third_prime
Rule 6     program_third_prime -> vars program_third_prime
Rule 7     program_third_prime -> body END
Rule 8     main_quad -> <empty>
Rule 9     add_function_to_directory -> <empty>
Rule 10    vars -> type type_getter vars_prime vars_fourth_prime
Rule 11    type_getter -> <empty>
Rule 12    vars_prime -> ID vars_second_prime
Rule 13    vars_second_prime -> LEFTB exp RIGHTB vars_third_prime
Rule 14    vars_second_prime -> <empty>
Rule 15    vars_third_prime -> LEFTB exp RIGHTB
Rule 16    vars_third_prime -> <empty>
Rule 17    vars_fourth_prime -> SEPARATOR vars_prime vars_fourth_prime
Rule 18    vars_fourth_prime -> vars_fifth_prime
Rule 19    vars_fifth_prime -> EOS
Rule 20    type -> TYPEINT
Rule 21    type -> TYPEFLOAT
Rule 22    type -> TYPECHAR
Rule 23    body -> statement EOS body_prime
Rule 24    body_prime -> body
Rule 25    body_prime -> <empty>
Rule 26    modules -> FUNCTION modules_prime ID LEFTP modules_second_prime
Rule 27    modules_prime -> type
Rule 28    modules_prime -> NOTYPE
Rule 29    modules_second_prime -> type ID modules_third_prime
Rule 30    modules_third_prime -> SEPARATOR modules_second_prime
Rule 31    modules_third_prime -> RIGHTP LEFTBRACE modules_fourth_prime
Rule 32    modules_fourth_prime -> vars modules_fourth_prime
Rule 33    modules_fourth_prime -> body RIGHTBRACE
Rule 34    push_to_operandstack -> <empty>
Rule 35    push_to_operatorstack -> <empty>
Rule 36    statement -> assignment
Rule 37    statement -> print
Rule 38    statement -> functioncall
Rule 39    statement -> condition
Rule 40    statement -> specialfunction
Rule 41    increment -> ID increment_prime
Rule 42    increment_prime -> EQUALS increment_second_prime
Rule 43    increment_prime -> INCREMENT
Rule 44    increment_second_prime -> CSTI PLUS ID
Rule 45    increment_second_prime -> ID PLUS CSTI
Rule 46    assignment -> ID push_to_operandstack assignment_prime EQUALS push_to_operatorstack expression assign_quads
Rule 47    assignment_prime -> <empty>
Rule 48    assignment_prime -> LEFTB exp RIGHTB assignment_second_prime
Rule 49    assignment_second_prime -> <empty>
Rule 50    assignment_second_prime -> LEFTB exp RIGHTB
Rule 51    assign_quads -> <empty>
Rule 52    condition -> WHILE LEFTP compoundexp RIGHTP LEFTBRACE body RIGHTBRACE
Rule 53    condition -> FOR LEFTP assignment condition_prime
Rule 54    condition -> IF condition_second_prime
Rule 55    condition_prime -> SEPARATOR assignment condition_prime
Rule 56    condition_prime -> EOS compoundexp EOS increment RIGHTP LEFTBRACE body RIGHTBRACE
Rule 57    condition_second_prime -> LEFTP compoundexp RIGHTP condition_third_prime
Rule 58    condition_third_prime -> statement condition_fourth_prime
Rule 59    condition_third_prime -> LEFTBRACE body RIGHTBRACE condition_fourth_prime
Rule 60    condition_fourth_prime -> ELSEIF condition_second_prime
Rule 61    condition_fourth_prime -> ELSE condition_fifth_prime
Rule 62    condition_fourth_prime -> <empty>
Rule 63    condition_fifth_prime -> statement
Rule 64    condition_fifth_prime -> LEFTB body RIGHTB
Rule 65    functioncall -> ID LEFTP exp functioncall_prime
Rule 66    functioncall_prime -> SEPARATOR exp functioncall_prime
Rule 67    functioncall_prime -> RIGHTP
Rule 68    expression -> exp expression_prime
Rule 69    expression_prime -> GREATER exp expression_prime
Rule 70    expression_prime -> LESS exp expression_prime
Rule 71    expression_prime -> EQUAL exp expression_prime
Rule 72    expression_prime -> NOTEQUAL exp expression_prime
Rule 73    expression_prime -> GREATEREQUAL exp expression_prime
Rule 74    expression_prime -> LESSEQUAL exp expression_prime
Rule 75    expression_prime -> <empty>
Rule 76    print -> PRINT LEFTP print_prime
Rule 77    print_prime -> RIGHTP
Rule 78    print_prime -> expression RIGHTP
Rule 79    exp -> term exp_prime
Rule 80    exp_prime -> PLUS term exp_prime
Rule 81    exp_prime -> MINUS term exp_prime
Rule 82    exp_prime -> <empty>
Rule 83    operand -> CSTI
Rule 84    operand -> CSTF
Rule 85    operand -> ID operand_prime
Rule 86    operand_prime -> LEFTB exp RIGHTB operand_second_prime
Rule 87    operand_prime -> LEFTP exp operand_third_prime
Rule 88    operand_prime -> <empty>
Rule 89    operand_second_prime -> <empty>
Rule 90    operand_second_prime -> LEFTB exp RIGHTB
Rule 91    operand_third_prime -> SEPARATOR exp operand_third_prime
Rule 92    operand_third_prime -> RIGHTP
Rule 93    term -> factor term_prime
Rule 94    term_prime -> MULTIPLY factor term_prime
Rule 95    term_prime -> DIVIDE factor term_prime
Rule 96    term_prime -> <empty>
Rule 97    factor -> LEFTP expression RIGHTP
Rule 98    factor -> operand
Rule 99    factor -> PLUS operand
Rule 100   factor -> MINUS operand
Rule 101   specialfunction -> JEDO POINT specialfunction_prime
Rule 102   specialfunction_prime -> CIRCLE LEFTP exp RIGHTP
Rule 103   specialfunction_prime -> SQUARE LEFTP exp SEPARATOR exp RIGHTP
Rule 104   specialfunction_prime -> RECTANGLE LEFTP exp SEPARATOR exp RIGHTP
Rule 105   specialfunction_prime -> FORWARD LEFTP exp RIGHTP
Rule 106   specialfunction_prime -> BACK LEFTP exp RIGHTP
Rule 107   specialfunction_prime -> TURNRIGHT LEFTP exp RIGHTP
Rule 108   specialfunction_prime -> TURNLEFT LEFTP exp RIGHTP
Rule 109   specialfunction_prime -> COLOR LEFTP exp SEPARATOR exp SEPARATOR exp RIGHTP
Rule 110   specialfunction_prime -> ARCH LEFTP exp RIGHTP
Rule 111   specialfunction_prime -> LINE LEFTP exp SEPARATOR exp RIGHTP
Rule 112   specialfunction_prime -> THICKNESS LEFTP exp RIGHTP
Rule 113   compoundexp -> expression compoundexp_prime
Rule 114   compoundexp_prime -> AND compoundexp
Rule 115   compoundexp_prime -> OR compoundexp
Rule 116   compoundexp_prime -> <empty>

Terminals, with rules where they appear

AND                  : 114
ARCH                 : 110
BACK                 : 106
CIRCLE               : 102
COLOR                : 109
CSTF                 : 84
CSTI                 : 44 45 83
DIVIDE               : 95
ELSE                 : 61
ELSEIF               : 60
END                  : 7
EOS                  : 1 19 23 56 56
EQUAL                : 71
EQUALS               : 42 46
FOR                  : 53
FORWARD              : 105
FUNCTION             : 26
GREATER              : 69
GREATEREQUAL         : 73
ID                   : 1 12 26 29 41 44 45 46 65 85
IF                   : 54
INCREMENT            : 43
JEDO                 : 101
LEFTB                : 13 15 48 50 64 86 90
LEFTBRACE            : 31 52 56 59
LEFTP                : 26 52 53 57 65 76 87 97 102 103 104 105 106 107 108 109 110 111 112
LESS                 : 70
LESSEQUAL            : 74
LINE                 : 111
MAIN                 : 5
MINUS                : 81 100
MULTIPLY             : 94
NOTEQUAL             : 72
NOTYPE               : 28
OR                   : 115
PLUS                 : 44 45 80 99
POINT                : 101
PRGM                 : 1
PRINT                : 76
RECTANGLE            : 104
RIGHTB               : 13 15 48 50 64 86 90
RIGHTBRACE           : 33 52 56 59
RIGHTP               : 31 52 56 57 67 77 78 92 97 102 103 104 105 106 107 108 109 110 111 112
SEPARATOR            : 17 30 55 66 91 103 104 109 109 111
SQUARE               : 103
THICKNESS            : 112
TURNLEFT             : 108
TURNRIGHT            : 107
TYPECHAR             : 22
TYPEFLOAT            : 21
TYPEINT              : 20
WHILE                : 52
error                : 

Nonterminals, with rules where they appear

add_function_to_directory : 1
assign_quads         : 46
assignment           : 36 53 55
assignment_prime     : 46
assignment_second_prime : 48
body                 : 7 24 33 52 56 59 64
body_prime           : 23
compoundexp          : 52 56 57 114 115
compoundexp_prime    : 113
condition            : 39
condition_fifth_prime : 61
condition_fourth_prime : 58 59
condition_prime      : 53 55
condition_second_prime : 54 60
condition_third_prime : 57
exp                  : 13 15 48 50 65 66 68 69 70 71 72 73 74 86 87 90 91 102 103 103 104 104 105 106 107 108 109 109 109 110 111 111 112
exp_prime            : 79 80 81
expression           : 46 78 97 113
expression_prime     : 68 69 70 71 72 73 74
factor               : 93 94 95
functioncall         : 38
functioncall_prime   : 65 66
increment            : 56
increment_prime      : 41
increment_second_prime : 42
main_quad            : 1
modules              : 4
modules_fourth_prime : 31 32
modules_prime        : 26
modules_second_prime : 26 30
modules_third_prime  : 29
operand              : 98 99 100
operand_prime        : 85
operand_second_prime : 86
operand_third_prime  : 87 91
print                : 37
print_prime          : 76
program              : 0
program_prime        : 1 2
program_second_prime : 3 4
program_third_prime  : 5 6
push_to_operandstack : 46
push_to_operatorstack : 46
specialfunction      : 40
specialfunction_prime : 101
statement            : 23 58 63
term                 : 79 80 81
term_prime           : 93 94 95
type                 : 10 27 29
type_getter          : 10
vars                 : 2 6 32
vars_fifth_prime     : 18
vars_fourth_prime    : 10 17
vars_prime           : 10 17
vars_second_prime    : 12
vars_third_prime     : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PRGM ID main_quad add_function_to_directory EOS program_prime

    PRGM            shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PRGM . ID main_quad add_function_to_directory EOS program_prime

    ID              shift and go to state 3


state 3

    (1) program -> PRGM ID . main_quad add_function_to_directory EOS program_prime
    (8) main_quad -> .

    EOS             reduce using rule 8 (main_quad -> .)

    main_quad                      shift and go to state 4

state 4

    (1) program -> PRGM ID main_quad . add_function_to_directory EOS program_prime
    (9) add_function_to_directory -> .

    EOS             reduce using rule 9 (add_function_to_directory -> .)

    add_function_to_directory      shift and go to state 5

state 5

    (1) program -> PRGM ID main_quad add_function_to_directory . EOS program_prime

    EOS             shift and go to state 6


state 6

    (1) program -> PRGM ID main_quad add_function_to_directory EOS . program_prime
    (2) program_prime -> . vars program_prime
    (3) program_prime -> . program_second_prime
    (10) vars -> . type type_getter vars_prime vars_fourth_prime
    (4) program_second_prime -> . modules program_second_prime
    (5) program_second_prime -> . MAIN program_third_prime
    (20) type -> . TYPEINT
    (21) type -> . TYPEFLOAT
    (22) type -> . TYPECHAR
    (26) modules -> . FUNCTION modules_prime ID LEFTP modules_second_prime

    MAIN            shift and go to state 12
    TYPEINT         shift and go to state 13
    TYPEFLOAT       shift and go to state 14
    TYPECHAR        shift and go to state 15
    FUNCTION        shift and go to state 16

    program_prime                  shift and go to state 7
    vars                           shift and go to state 8
    program_second_prime           shift and go to state 9
    type                           shift and go to state 10
    modules                        shift and go to state 11

state 7

    (1) program -> PRGM ID main_quad add_function_to_directory EOS program_prime .

    $end            reduce using rule 1 (program -> PRGM ID main_quad add_function_to_directory EOS program_prime .)


state 8

    (2) program_prime -> vars . program_prime
    (2) program_prime -> . vars program_prime
    (3) program_prime -> . program_second_prime
    (10) vars -> . type type_getter vars_prime vars_fourth_prime
    (4) program_second_prime -> . modules program_second_prime
    (5) program_second_prime -> . MAIN program_third_prime
    (20) type -> . TYPEINT
    (21) type -> . TYPEFLOAT
    (22) type -> . TYPECHAR
    (26) modules -> . FUNCTION modules_prime ID LEFTP modules_second_prime

    MAIN            shift and go to state 12
    TYPEINT         shift and go to state 13
    TYPEFLOAT       shift and go to state 14
    TYPECHAR        shift and go to state 15
    FUNCTION        shift and go to state 16

    vars                           shift and go to state 8
    program_prime                  shift and go to state 17
    program_second_prime           shift and go to state 9
    type                           shift and go to state 10
    modules                        shift and go to state 11

state 9

    (3) program_prime -> program_second_prime .

    $end            reduce using rule 3 (program_prime -> program_second_prime .)


state 10

    (10) vars -> type . type_getter vars_prime vars_fourth_prime
    (11) type_getter -> .

    ID              reduce using rule 11 (type_getter -> .)

    type_getter                    shift and go to state 18

state 11

    (4) program_second_prime -> modules . program_second_prime
    (4) program_second_prime -> . modules program_second_prime
    (5) program_second_prime -> . MAIN program_third_prime
    (26) modules -> . FUNCTION modules_prime ID LEFTP modules_second_prime

    MAIN            shift and go to state 12
    FUNCTION        shift and go to state 16

    modules                        shift and go to state 11
    program_second_prime           shift and go to state 19

state 12

    (5) program_second_prime -> MAIN . program_third_prime
    (6) program_third_prime -> . vars program_third_prime
    (7) program_third_prime -> . body END
    (10) vars -> . type type_getter vars_prime vars_fourth_prime
    (23) body -> . statement EOS body_prime
    (20) type -> . TYPEINT
    (21) type -> . TYPEFLOAT
    (22) type -> . TYPECHAR
    (36) statement -> . assignment
    (37) statement -> . print
    (38) statement -> . functioncall
    (39) statement -> . condition
    (40) statement -> . specialfunction
    (46) assignment -> . ID push_to_operandstack assignment_prime EQUALS push_to_operatorstack expression assign_quads
    (76) print -> . PRINT LEFTP print_prime
    (65) functioncall -> . ID LEFTP exp functioncall_prime
    (52) condition -> . WHILE LEFTP compoundexp RIGHTP LEFTBRACE body RIGHTBRACE
    (53) condition -> . FOR LEFTP assignment condition_prime
    (54) condition -> . IF condition_second_prime
    (101) specialfunction -> . JEDO POINT specialfunction_prime

    TYPEINT         shift and go to state 13
    TYPEFLOAT       shift and go to state 14
    TYPECHAR        shift and go to state 15
    ID              shift and go to state 29
    PRINT           shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    IF              shift and go to state 33
    JEDO            shift and go to state 34

    program_third_prime            shift and go to state 20
    vars                           shift and go to state 21
    body                           shift and go to state 22
    type                           shift and go to state 10
    statement                      shift and go to state 23
    assignment                     shift and go to state 24
    print                          shift and go to state 25
    functioncall                   shift and go to state 26
    condition                      shift and go to state 27
    specialfunction                shift and go to state 28

state 13

    (20) type -> TYPEINT .

    ID              reduce using rule 20 (type -> TYPEINT .)


state 14

    (21) type -> TYPEFLOAT .

    ID              reduce using rule 21 (type -> TYPEFLOAT .)


state 15

    (22) type -> TYPECHAR .

    ID              reduce using rule 22 (type -> TYPECHAR .)


state 16

    (26) modules -> FUNCTION . modules_prime ID LEFTP modules_second_prime
    (27) modules_prime -> . type
    (28) modules_prime -> . NOTYPE
    (20) type -> . TYPEINT
    (21) type -> . TYPEFLOAT
    (22) type -> . TYPECHAR

    NOTYPE          shift and go to state 37
    TYPEINT         shift and go to state 13
    TYPEFLOAT       shift and go to state 14
    TYPECHAR        shift and go to state 15

    modules_prime                  shift and go to state 35
    type                           shift and go to state 36

state 17

    (2) program_prime -> vars program_prime .

    $end            reduce using rule 2 (program_prime -> vars program_prime .)


state 18

    (10) vars -> type type_getter . vars_prime vars_fourth_prime
    (12) vars_prime -> . ID vars_second_prime

    ID              shift and go to state 39

    vars_prime                     shift and go to state 38

state 19

    (4) program_second_prime -> modules program_second_prime .

    $end            reduce using rule 4 (program_second_prime -> modules program_second_prime .)


state 20

    (5) program_second_prime -> MAIN program_third_prime .

    $end            reduce using rule 5 (program_second_prime -> MAIN program_third_prime .)


state 21

    (6) program_third_prime -> vars . program_third_prime
    (6) program_third_prime -> . vars program_third_prime
    (7) program_third_prime -> . body END
    (10) vars -> . type type_getter vars_prime vars_fourth_prime
    (23) body -> . statement EOS body_prime
    (20) type -> . TYPEINT
    (21) type -> . TYPEFLOAT
    (22) type -> . TYPECHAR
    (36) statement -> . assignment
    (37) statement -> . print
    (38) statement -> . functioncall
    (39) statement -> . condition
    (40) statement -> . specialfunction
    (46) assignment -> . ID push_to_operandstack assignment_prime EQUALS push_to_operatorstack expression assign_quads
    (76) print -> . PRINT LEFTP print_prime
    (65) functioncall -> . ID LEFTP exp functioncall_prime
    (52) condition -> . WHILE LEFTP compoundexp RIGHTP LEFTBRACE body RIGHTBRACE
    (53) condition -> . FOR LEFTP assignment condition_prime
    (54) condition -> . IF condition_second_prime
    (101) specialfunction -> . JEDO POINT specialfunction_prime

    TYPEINT         shift and go to state 13
    TYPEFLOAT       shift and go to state 14
    TYPECHAR        shift and go to state 15
    ID              shift and go to state 29
    PRINT           shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    IF              shift and go to state 33
    JEDO            shift and go to state 34

    vars                           shift and go to state 21
    program_third_prime            shift and go to state 40
    body                           shift and go to state 22
    type                           shift and go to state 10
    statement                      shift and go to state 23
    assignment                     shift and go to state 24
    print                          shift and go to state 25
    functioncall                   shift and go to state 26
    condition                      shift and go to state 27
    specialfunction                shift and go to state 28

state 22

    (7) program_third_prime -> body . END

    END             shift and go to state 41


state 23

    (23) body -> statement . EOS body_prime

    EOS             shift and go to state 42


state 24

    (36) statement -> assignment .

    EOS             reduce using rule 36 (statement -> assignment .)
    ELSEIF          reduce using rule 36 (statement -> assignment .)
    ELSE            reduce using rule 36 (statement -> assignment .)


state 25

    (37) statement -> print .

    EOS             reduce using rule 37 (statement -> print .)
    ELSEIF          reduce using rule 37 (statement -> print .)
    ELSE            reduce using rule 37 (statement -> print .)


state 26

    (38) statement -> functioncall .

    EOS             reduce using rule 38 (statement -> functioncall .)
    ELSEIF          reduce using rule 38 (statement -> functioncall .)
    ELSE            reduce using rule 38 (statement -> functioncall .)


state 27

    (39) statement -> condition .

    EOS             reduce using rule 39 (statement -> condition .)
    ELSEIF          reduce using rule 39 (statement -> condition .)
    ELSE            reduce using rule 39 (statement -> condition .)


state 28

    (40) statement -> specialfunction .

    EOS             reduce using rule 40 (statement -> specialfunction .)
    ELSEIF          reduce using rule 40 (statement -> specialfunction .)
    ELSE            reduce using rule 40 (statement -> specialfunction .)


state 29

    (46) assignment -> ID . push_to_operandstack assignment_prime EQUALS push_to_operatorstack expression assign_quads
    (65) functioncall -> ID . LEFTP exp functioncall_prime
    (34) push_to_operandstack -> .

    LEFTP           shift and go to state 44
    LEFTB           reduce using rule 34 (push_to_operandstack -> .)
    EQUALS          reduce using rule 34 (push_to_operandstack -> .)

    push_to_operandstack           shift and go to state 43

state 30

    (76) print -> PRINT . LEFTP print_prime

    LEFTP           shift and go to state 45


state 31

    (52) condition -> WHILE . LEFTP compoundexp RIGHTP LEFTBRACE body RIGHTBRACE

    LEFTP           shift and go to state 46


state 32

    (53) condition -> FOR . LEFTP assignment condition_prime

    LEFTP           shift and go to state 47


state 33

    (54) condition -> IF . condition_second_prime
    (57) condition_second_prime -> . LEFTP compoundexp RIGHTP condition_third_prime

    LEFTP           shift and go to state 49

    condition_second_prime         shift and go to state 48

state 34

    (101) specialfunction -> JEDO . POINT specialfunction_prime

    POINT           shift and go to state 50


state 35

    (26) modules -> FUNCTION modules_prime . ID LEFTP modules_second_prime

    ID              shift and go to state 51


state 36

    (27) modules_prime -> type .

    ID              reduce using rule 27 (modules_prime -> type .)


state 37

    (28) modules_prime -> NOTYPE .

    ID              reduce using rule 28 (modules_prime -> NOTYPE .)


state 38

    (10) vars -> type type_getter vars_prime . vars_fourth_prime
    (17) vars_fourth_prime -> . SEPARATOR vars_prime vars_fourth_prime
    (18) vars_fourth_prime -> . vars_fifth_prime
    (19) vars_fifth_prime -> . EOS

    SEPARATOR       shift and go to state 53
    EOS             shift and go to state 55

    vars_fourth_prime              shift and go to state 52
    vars_fifth_prime               shift and go to state 54

state 39

    (12) vars_prime -> ID . vars_second_prime
    (13) vars_second_prime -> . LEFTB exp RIGHTB vars_third_prime
    (14) vars_second_prime -> .

    LEFTB           shift and go to state 57
    SEPARATOR       reduce using rule 14 (vars_second_prime -> .)
    EOS             reduce using rule 14 (vars_second_prime -> .)

    vars_second_prime              shift and go to state 56

state 40

    (6) program_third_prime -> vars program_third_prime .

    $end            reduce using rule 6 (program_third_prime -> vars program_third_prime .)


state 41

    (7) program_third_prime -> body END .

    $end            reduce using rule 7 (program_third_prime -> body END .)


state 42

    (23) body -> statement EOS . body_prime
    (24) body_prime -> . body
    (25) body_prime -> .
    (23) body -> . statement EOS body_prime
    (36) statement -> . assignment
    (37) statement -> . print
    (38) statement -> . functioncall
    (39) statement -> . condition
    (40) statement -> . specialfunction
    (46) assignment -> . ID push_to_operandstack assignment_prime EQUALS push_to_operatorstack expression assign_quads
    (76) print -> . PRINT LEFTP print_prime
    (65) functioncall -> . ID LEFTP exp functioncall_prime
    (52) condition -> . WHILE LEFTP compoundexp RIGHTP LEFTBRACE body RIGHTBRACE
    (53) condition -> . FOR LEFTP assignment condition_prime
    (54) condition -> . IF condition_second_prime
    (101) specialfunction -> . JEDO POINT specialfunction_prime

    END             reduce using rule 25 (body_prime -> .)
    RIGHTBRACE      reduce using rule 25 (body_prime -> .)
    RIGHTB          reduce using rule 25 (body_prime -> .)
    ID              shift and go to state 29
    PRINT           shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    IF              shift and go to state 33
    JEDO            shift and go to state 34

    statement                      shift and go to state 23
    body_prime                     shift and go to state 58
    body                           shift and go to state 59
    assignment                     shift and go to state 24
    print                          shift and go to state 25
    functioncall                   shift and go to state 26
    condition                      shift and go to state 27
    specialfunction                shift and go to state 28

state 43

    (46) assignment -> ID push_to_operandstack . assignment_prime EQUALS push_to_operatorstack expression assign_quads
    (47) assignment_prime -> .
    (48) assignment_prime -> . LEFTB exp RIGHTB assignment_second_prime

    EQUALS          reduce using rule 47 (assignment_prime -> .)
    LEFTB           shift and go to state 61

    assignment_prime               shift and go to state 60

state 44

    (65) functioncall -> ID LEFTP . exp functioncall_prime
    (79) exp -> . term exp_prime
    (93) term -> . factor term_prime
    (97) factor -> . LEFTP expression RIGHTP
    (98) factor -> . operand
    (99) factor -> . PLUS operand
    (100) factor -> . MINUS operand
    (83) operand -> . CSTI
    (84) operand -> . CSTF
    (85) operand -> . ID operand_prime

    LEFTP           shift and go to state 63
    PLUS            shift and go to state 68
    MINUS           shift and go to state 69
    CSTI            shift and go to state 70
    CSTF            shift and go to state 71
    ID              shift and go to state 62

    exp                            shift and go to state 64
    term                           shift and go to state 65
    factor                         shift and go to state 66
    operand                        shift and go to state 67

state 45

    (76) print -> PRINT LEFTP . print_prime
    (77) print_prime -> . RIGHTP
    (78) print_prime -> . expression RIGHTP
    (68) expression -> . exp expression_prime
    (79) exp -> . term exp_prime
    (93) term -> . factor term_prime
    (97) factor -> . LEFTP expression RIGHTP
    (98) factor -> . operand
    (99) factor -> . PLUS operand
    (100) factor -> . MINUS operand
    (83) operand -> . CSTI
    (84) operand -> . CSTF
    (85) operand -> . ID operand_prime

    RIGHTP          shift and go to state 73
    LEFTP           shift and go to state 63
    PLUS            shift and go to state 68
    MINUS           shift and go to state 69
    CSTI            shift and go to state 70
    CSTF            shift and go to state 71
    ID              shift and go to state 62

    print_prime                    shift and go to state 72
    expression                     shift and go to state 74
    exp                            shift and go to state 75
    term                           shift and go to state 65
    factor                         shift and go to state 66
    operand                        shift and go to state 67

state 46

    (52) condition -> WHILE LEFTP . compoundexp RIGHTP LEFTBRACE body RIGHTBRACE
    (113) compoundexp -> . expression compoundexp_prime
    (68) expression -> . exp expression_prime
    (79) exp -> . term exp_prime
    (93) term -> . factor term_prime
    (97) factor -> . LEFTP expression RIGHTP
    (98) factor -> . operand
    (99) factor -> . PLUS operand
    (100) factor -> . MINUS operand
    (83) operand -> . CSTI
    (84) operand -> . CSTF
    (85) operand -> . ID operand_prime

    LEFTP           shift and go to state 63
    PLUS            shift and go to state 68
    MINUS           shift and go to state 69
    CSTI            shift and go to state 70
    CSTF            shift and go to state 71
    ID              shift and go to state 62

    compoundexp                    shift and go to state 76
    expression                     shift and go to state 77
    exp                            shift and go to state 75
    term                           shift and go to state 65
    factor                         shift and go to state 66
    operand                        shift and go to state 67

state 47

    (53) condition -> FOR LEFTP . assignment condition_prime
    (46) assignment -> . ID push_to_operandstack assignment_prime EQUALS push_to_operatorstack expression assign_quads

    ID              shift and go to state 79

    assignment                     shift and go to state 78

state 48

    (54) condition -> IF condition_second_prime .

    EOS             reduce using rule 54 (condition -> IF condition_second_prime .)
    ELSEIF          reduce using rule 54 (condition -> IF condition_second_prime .)
    ELSE            reduce using rule 54 (condition -> IF condition_second_prime .)


state 49

    (57) condition_second_prime -> LEFTP . compoundexp RIGHTP condition_third_prime
    (113) compoundexp -> . expression compoundexp_prime
    (68) expression -> . exp expression_prime
    (79) exp -> . term exp_prime
    (93) term -> . factor term_prime
    (97) factor -> . LEFTP expression RIGHTP
    (98) factor -> . operand
    (99) factor -> . PLUS operand
    (100) factor -> . MINUS operand
    (83) operand -> . CSTI
    (84) operand -> . CSTF
    (85) operand -> . ID operand_prime

    LEFTP           shift and go to state 63
    PLUS            shift and go to state 68
    MINUS           shift and go to state 69
    CSTI            shift and go to state 70
    CSTF            shift and go to state 71
    ID              shift and go to state 62

    compoundexp                    shift and go to state 80
    expression                     shift and go to state 77
    exp                            shift and go to state 75
    term                           shift and go to state 65
    factor                         shift and go to state 66
    operand                        shift and go to state 67

state 50

    (101) specialfunction -> JEDO POINT . specialfunction_prime
    (102) specialfunction_prime -> . CIRCLE LEFTP exp RIGHTP
    (103) specialfunction_prime -> . SQUARE LEFTP exp SEPARATOR exp RIGHTP
    (104) specialfunction_prime -> . RECTANGLE LEFTP exp SEPARATOR exp RIGHTP
    (105) specialfunction_prime -> . FORWARD LEFTP exp RIGHTP
    (106) specialfunction_prime -> . BACK LEFTP exp RIGHTP
    (107) specialfunction_prime -> . TURNRIGHT LEFTP exp RIGHTP
    (108) specialfunction_prime -> . TURNLEFT LEFTP exp RIGHTP
    (109) specialfunction_prime -> . COLOR LEFTP exp SEPARATOR exp SEPARATOR exp RIGHTP
    (110) specialfunction_prime -> . ARCH LEFTP exp RIGHTP
    (111) specialfunction_prime -> . LINE LEFTP exp SEPARATOR exp RIGHTP
    (112) specialfunction_prime -> . THICKNESS LEFTP exp RIGHTP

    CIRCLE          shift and go to state 82
    SQUARE          shift and go to state 83
    RECTANGLE       shift and go to state 84
    FORWARD         shift and go to state 85
    BACK            shift and go to state 86
    TURNRIGHT       shift and go to state 87
    TURNLEFT        shift and go to state 88
    COLOR           shift and go to state 89
    ARCH            shift and go to state 90
    LINE            shift and go to state 91
    THICKNESS       shift and go to state 92

    specialfunction_prime          shift and go to state 81

state 51

    (26) modules -> FUNCTION modules_prime ID . LEFTP modules_second_prime

    LEFTP           shift and go to state 93


state 52

    (10) vars -> type type_getter vars_prime vars_fourth_prime .

    MAIN            reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)
    TYPEINT         reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)
    TYPEFLOAT       reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)
    TYPECHAR        reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)
    FUNCTION        reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)
    ID              reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)
    PRINT           reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)
    WHILE           reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)
    FOR             reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)
    IF              reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)
    JEDO            reduce using rule 10 (vars -> type type_getter vars_prime vars_fourth_prime .)


state 53

    (17) vars_fourth_prime -> SEPARATOR . vars_prime vars_fourth_prime
    (12) vars_prime -> . ID vars_second_prime

    ID              shift and go to state 39

    vars_prime                     shift and go to state 94

state 54

    (18) vars_fourth_prime -> vars_fifth_prime .

    MAIN            reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)
    TYPEINT         reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)
    TYPEFLOAT       reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)
    TYPECHAR        reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)
    FUNCTION        reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)
    ID              reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)
    PRINT           reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)
    WHILE           reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)
    FOR             reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)
    IF              reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)
    JEDO            reduce using rule 18 (vars_fourth_prime -> vars_fifth_prime .)


state 55

    (19) vars_fifth_prime -> EOS .

    MAIN            reduce using rule 19 (vars_fifth_prime -> EOS .)
    TYPEINT         reduce using rule 19 (vars_fifth_prime -> EOS .)
    TYPEFLOAT       reduce using rule 19 (vars_fifth_prime -> EOS .)
    TYPECHAR        reduce using rule 19 (vars_fifth_prime -> EOS .)
    FUNCTION        reduce using rule 19 (vars_fifth_prime -> EOS .)
    ID              reduce using rule 19 (vars_fifth_prime -> EOS .)
    PRINT           reduce using rule 19 (vars_fifth_prime -> EOS .)
    WHILE           reduce using rule 19 (vars_fifth_prime -> EOS .)
    FOR             reduce using rule 19 (vars_fifth_prime -> EOS .)
    IF              reduce using rule 19 (vars_fifth_prime -> EOS .)
    JEDO            reduce using rule 19 (vars_fifth_prime -> EOS .)


state 56

    (12) vars_prime -> ID vars_second_prime .

    SEPARATOR       reduce using rule 12 (vars_prime -> ID vars_second_prime .)
    EOS             reduce using rule 12 (vars_prime -> ID vars_second_prime .)


state 57

    (13) vars_second_prime -> LEFTB . exp RIGHTB vars_third_prime
    (79) exp -> . term exp_prime
    (93) term -> . factor term_prime
